--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,7 @@ sonar.projectVersion=9.0.0
 sonar.sources=src/
 sonar.inclusions=src/**/*.js
 sonar.exclusions=src/legacy/**/*.js,src/common/style/CartoCSS.js
+sonar.coverage.exclusions= src/classic/libs/**/*.js
 # sonar.test.inclusions=test/**/*.js
 
 # Language
